# capstone-sem6

./: .env.example  .flake8  .gitignore  DEMO_CHECKLIST.md  DEMO_STARTUP_GUIDE.md  MOCK_DATA_INTEGRATION_CONFIRMED.md  MVP_STATUS.md  Makefile  OPTIMIZATION_FIX.md  QUICKSTART_MOCK_DATA.md  README.md  REDIS_MOCK_DATA_TEST_RESULTS.md  TASK_10_IMPLEMENTATION_SUMMARY.md  TASK_11_IMPLEMENTATION_SUMMARY.md  TASK_19_IMPLEMENTATION_SUMMARY.md  TASK_20_IMPLEMENTATION_SUMMARY.md  TASK_22_IMPLEMENTATION_SUMMARY.md  TASK_25_IMPLEMENTATION_SUMMARY.md  TASK_5_IMPLEMENTATION_SUMMARY.md  TASK_7_IMPLEMENTATION_SUMMARY.md  TASK_8_IMPLEMENTATION_SUMMARY.md  TASK_9_IMPLEMENTATION_SUMMARY.md  docker-compose.yml  pyproject.toml  test_api_endpoints.py  test_optimization_fix.py
config/: settings.py
data/: README.md
data/mock/: furnace-01_data.csv  metadata.json
examples/: alert_suppression_example.py  auth_example.py  counterfactual_simulation_example.py  discovery_api_example.py  drift_detection_example.py  nonlinear_causal_discovery_example.py  rca_validation_example.py  redis_cache_example.py  redis_with_mock_data.py  simple_integration_test.py  test_integration_layer.py  test_with_mock_data.py  timeseries_writer_example.py
frontend/: CITIZEN_ANALYST_IMPLEMENTATION.md  GRAPH_BUILDER_IMPLEMENTATION.md  README.md  package-lock.json  package.json
frontend/src/: App.tsx  index.css
migrations/: 001_create_causal_dags_table.sql  002_create_station_models_table.sql  003_create_audit_logs_table.sql  004_create_supporting_tables.sql  README.md  run_migrations.py
scripts/: dev-commands.ps1  format.sh  generate_mock_data.py  lint.sh  run_tests.sh  setup.ps1  setup_dev.sh  setup_influxdb.py  setup_keycloak.py
src/: __init__.py  main.py
src/api/: auth.py  exceptions.py  keycloak_auth.py  mfa.py  middleware.py  models.py  rate_limit.py  rbac.py
src/causal_engine/: __init__.py  alert_suppression.py  discovery.py  drift_detector.py  drift_scheduler.py  inference.py  rca.py  refutation.py
src/data_integration/: README.md  (+8 more)
tests/: __init__.py  test_main.py
(+65 files in other folders)
