[tool.poetry]
name = "causal-ai-manufacturing-platform"
version = "0.1.0"
description = "Enterprise-grade decision intelligence system for manufacturing operations using causal reasoning"
authors = ["Your Team <team@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
# Core API
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"

# Causal libraries
lingam = "^1.8.3"
dowhy = "^0.11"
numpy = "^1.26.0"
scipy = "^1.11.0"

# Data processing
pandas = "^2.1.0"
dask = {extras = ["complete"], version = "^2024.1.0"}
kafka-python = "^2.0.2"

# Databases
psycopg2-binary = "^2.9.9"
redis = "^5.0.1"
influxdb-client = "^1.39.0"
sqlalchemy = "^2.0.0"
pyodbc = "^5.0.0"

# ISA-95 Connectors
asyncua = "^1.0.0"
paho-mqtt = "^1.6.1"

# Utilities
python-dotenv = "^1.0.0"
pyyaml = "^6.0.1"

# Authentication and security
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
pyotp = "^2.9.0"
cryptography = "^42.0.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"

# Linting and formatting
black = "^23.12.0"
flake8 = "^7.0.0"
mypy = "^1.8.0"
isort = "^5.13.0"

# Type stubs
types-redis = "^4.6.0"
types-pyyaml = "^6.0.12"
pandas-stubs = "^2.1.0"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
